[gd_scene load_steps=34 format=3 uid="uid://c316ek4x22v2p"]

[ext_resource type="Script" uid="uid://cigms1jlsw4t1" path="res://Scripts/Menu/Main/Main_Menu.gd" id="1_8bt37"]
[ext_resource type="FontFile" uid="uid://dh8b3n051ubbv" path="res://Sprites/Fonts/MainFont.TTF" id="2_t8dpg"]
[ext_resource type="Script" uid="uid://rm3ba3elfhw0" path="res://Scripts/Menu/Main/Repetition.gd" id="3_5664y"]
[ext_resource type="Texture2D" uid="uid://bc4xmb6vpums4" path="res://Sprites/Backgrounds/Main_Background2.png" id="4_apcd8"]
[ext_resource type="AudioStream" uid="uid://egg81frtoxxt" path="res://audio/Tame Impala - Nangs (Original Instrumental).mp3" id="4_ec0ct"]
[ext_resource type="Script" uid="uid://dhd21hwxt6e2r" path="res://Scripts/audio_control.gd" id="5_m17uk"]
[ext_resource type="Script" uid="uid://b33wv112jwaoh" path="res://Scripts/Menu/Main/fullscreen_control.gd" id="6_dnggf"]
[ext_resource type="Script" uid="uid://b33kh6nsorqq5" path="res://Scripts/Menu/Main/armadietto.gd" id="7_7q4lt"]
[ext_resource type="Script" uid="uid://blniingo8w2rp" path="res://Scripts/AnimationsAddOn/MainMenuAnimations/ship_spawner.gd" id="8_0edrc"]
[ext_resource type="Texture2D" uid="uid://djn4upbon1o26" path="res://Sprites/Buttons/game1.png" id="8_vx55k"]
[ext_resource type="Script" uid="uid://bphev5uy11o6" path="res://Scripts/Menu/Main/miglioramenti.gd" id="9_dsoak"]
[ext_resource type="Texture2D" uid="uid://271bqqkgliq5" path="res://Sprites/Buttons/game2.png" id="9_mi1sd"]
[ext_resource type="Texture2D" uid="uid://dobsahcqhupdu" path="res://Sprites/Buttons/game3.png" id="10_0ss7m"]
[ext_resource type="Texture2D" uid="uid://4w1bvcgvv88n" path="res://Sprites/Buttons/Button_enabled_3x.png" id="10_yx677"]
[ext_resource type="Texture2D" uid="uid://36bnpyemjad3" path="res://Sprites/Buttons/Button_disabled_3x.png" id="11_pfocr"]
[ext_resource type="Texture2D" uid="uid://bx3pgdgf1rwwp" path="res://Sprites/Buttons/Button_enabled_spd.png" id="12_x26ma"]
[ext_resource type="Texture2D" uid="uid://dygm058dn02aq" path="res://Sprites/Buttons/Button_disabled_spd.png" id="13_lwwlo"]
[ext_resource type="Texture2D" uid="uid://bk8m7toqldnk2" path="res://Sprites/Buttons/Bottone 1.png" id="14_fb642"]
[ext_resource type="Texture2D" uid="uid://0eswjr2f77r6" path="res://Sprites/Buttons/Bottone 2.png" id="15_agrvx"]
[ext_resource type="Script" uid="uid://c7jot6njhhrem" path="res://Scripts/Menu/Main/skin.gd" id="16_1xdl7"]
[ext_resource type="Texture2D" uid="uid://byu5j8qpj1hv8" path="res://Sprites/Buttons/ship1_background.png" id="16_ptjyf"]
[ext_resource type="Texture2D" uid="uid://5ys73oi10ejs" path="res://Sprites/Buttons/ship2_background(1).png" id="17_5664y"]

[sub_resource type="Theme" id="Theme_lrj6p"]
default_font = ExtResource("2_t8dpg")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d7it8"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i0m7l"]
bg_color = Color(0.0103343, 0.182604, 0.233814, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6pknk"]
bg_color = Color(0.0467422, 0.398286, 0.496106, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.4)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pcxhq"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_wt6vc"]
color = Color(1, 1, 1, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_uxoih"]
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_allfm"]
grow_begin = -300.0
grow_end = 300.0
thickness = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nmst4"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fqffm"]
bg_color = Color(0.0103343, 0.182604, 0.233814, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cc4n5"]
bg_color = Color(0.0467422, 0.398286, 0.496106, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.4)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_lrj6p")
script = ExtResource("1_8bt37")

[node name="Parallax2D" type="Parallax2D" parent="."]
repeat_size = Vector2(1332.2, 0)
script = ExtResource("3_5664y")

[node name="Sprite2D" type="Sprite2D" parent="Parallax2D"]
texture_filter = 1
position = Vector2(762, 325)
scale = Vector2(0.242, 0.242)
texture = ExtResource("4_apcd8")

[node name="MainButtons" type="VBoxContainer" parent="."]
light_mask = 2
visibility_layer = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.5
offset_top = -71.0
offset_right = 163.5
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button1" type="Button" parent="MainButtons"]
light_mask = 2
visibility_layer = 2
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_d7it8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i0m7l")
theme_override_styles/hover = SubResource("StyleBoxFlat_6pknk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_pcxhq")
text = "Gioca"

[node name="Button2" type="Button" parent="MainButtons"]
light_mask = 2
visibility_layer = 2
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_d7it8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i0m7l")
theme_override_styles/hover = SubResource("StyleBoxFlat_6pknk")
text = "Armadietto"

[node name="Button3" type="Button" parent="MainButtons"]
light_mask = 2
visibility_layer = 2
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_d7it8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i0m7l")
theme_override_styles/hover = SubResource("StyleBoxFlat_6pknk")
text = "Opzioni"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -62.0
offset_top = 50.0
offset_right = 69.0
offset_bottom = 73.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 40
theme_override_fonts/font = ExtResource("2_t8dpg")
theme_override_font_sizes/font_size = 60
text = "Tempera Biscotti"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ec0ct")
autoplay = true
bus = &"Music"

[node name="Options" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -202.0
offset_top = -158.0
offset_right = 200.0
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = -62.5
offset_right = 115.0
offset_bottom = 62.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Opzioni"
horizontal_alignment = 1

[node name="AudioControl" type="HSlider" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_styles/slider = SubResource("StyleBoxLine_wt6vc")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_uxoih")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("5_m17uk")
audio_bus_name = "Music"

[node name="FullscreenControl" type="CheckButton" parent="Options/VBoxContainer"]
layout_mode = 2
text = "Schermo intero
"
script = ExtResource("6_dnggf")

[node name="Armadietto" type="Panel" parent="."]
layout_mode = 0
offset_left = 460.0
offset_top = 365.0
offset_right = 690.0
offset_bottom = 365.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_7q4lt")

[node name="Miglioramenti" type="Panel" parent="Armadietto"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -214.0
offset_top = -155.5
offset_right = 214.0
offset_bottom = 155.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_dsoak")

[node name="Label" type="Label" parent="Armadietto/Miglioramenti"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -195.5
offset_top = 23.0
offset_right = 197.5
offset_bottom = 64.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Miglioramenti"

[node name="Upgrade1" type="CheckButton" parent="Armadietto/Miglioramenti"]
layout_mode = 0
offset_left = 43.0
offset_top = 78.5
offset_right = 183.0
offset_bottom = 214.5
theme_override_icons/checked = ExtResource("10_yx677")
theme_override_icons/unchecked = ExtResource("11_pfocr")
text = "
"

[node name="Upgrade2" type="CheckButton" parent="Armadietto/Miglioramenti"]
layout_mode = 0
offset_left = 245.0
offset_top = 83.0
offset_right = 385.0
offset_bottom = 219.0
theme_override_colors/icon_disabled_color = Color(0.996078, 0, 0, 1)
theme_override_icons/checked = ExtResource("12_x26ma")
theme_override_icons/unchecked = ExtResource("13_lwwlo")

[node name="Button" type="Button" parent="Armadietto/Miglioramenti"]
z_index = 1
layout_mode = 0
offset_left = 49.0
offset_top = 84.0
offset_right = 177.0
offset_bottom = 213.0
theme_override_icons/icon = ExtResource("14_fb642")
theme_override_styles/normal = SubResource("StyleBoxLine_allfm")

[node name="Button2" type="Button" parent="Armadietto/Miglioramenti"]
z_index = 2
layout_mode = 0
offset_left = 251.0
offset_top = 85.0
offset_right = 379.0
offset_bottom = 214.0
theme_override_icons/icon = ExtResource("15_agrvx")
theme_override_styles/normal = SubResource("StyleBoxLine_allfm")

[node name="Ritorno" type="Button" parent="Armadietto/Miglioramenti"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -158.0
offset_top = -77.5
offset_right = 167.0
offset_bottom = -35.5
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_nmst4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fqffm")
theme_override_styles/hover = SubResource("StyleBoxFlat_cc4n5")
text = "Indietro"

[node name="Skin" type="Panel" parent="Armadietto"]
layout_mode = 0
offset_left = -100.0
offset_top = -155.0
offset_right = 329.0
offset_bottom = 152.0
script = ExtResource("16_1xdl7")

[node name="Label" type="Label" parent="Armadietto/Skin"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -139.5
offset_top = 26.0
offset_right = 142.5
offset_bottom = 67.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Navicelle"

[node name="Seleziona" type="Button" parent="Armadietto/Skin"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.5
offset_top = -77.5
offset_right = -29.5
offset_bottom = 58.5
grow_horizontal = 2
grow_vertical = 2
theme_override_icons/icon = ExtResource("16_ptjyf")

[node name="Seleziona2" type="Button" parent="Armadietto/Skin"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 32.5
offset_top = -79.5
offset_right = 168.5
offset_bottom = 56.5
grow_horizontal = 2
grow_vertical = 2
theme_override_icons/icon = ExtResource("17_5664y")

[node name="Back" type="Button" parent="Armadietto/Skin"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -155.5
offset_top = -71.0
offset_right = 169.5
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_nmst4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fqffm")
theme_override_styles/hover = SubResource("StyleBoxFlat_cc4n5")
text = "Indietro"

[node name="Label" type="Label" parent="Armadietto"]
layout_mode = 0
offset_left = -46.0
offset_top = -112.0
offset_right = 281.0
offset_bottom = -71.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Armadietto"

[node name="Costumi" type="Button" parent="Armadietto"]
layout_mode = 0
offset_left = -46.0
offset_top = -67.0
offset_right = 281.0
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_nmst4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fqffm")
theme_override_styles/hover = SubResource("StyleBoxFlat_cc4n5")
text = "Navicelle"

[node name="Upgrades" type="Button" parent="Armadietto"]
layout_mode = 0
offset_left = -46.0
offset_top = -34.0
offset_right = 281.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_nmst4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fqffm")
theme_override_styles/hover = SubResource("StyleBoxFlat_cc4n5")
text = "Miglioramenti"

[node name="Gioca" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.0
offset_top = -158.0
offset_right = 201.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Gioca"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -266.0
offset_top = -50.0
offset_right = 268.0
offset_bottom = -9.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Seleziona partita"

[node name="Back" type="Button" parent="Gioca"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -157.0
offset_top = -6.0
offset_right = 168.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_d7it8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i0m7l")
theme_override_styles/hover = SubResource("StyleBoxFlat_6pknk")
text = "Indietro"

[node name="HBoxContainer" type="HBoxContainer" parent="Gioca"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Mod1" type="TextureButton" parent="Gioca/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("8_vx55k")

[node name="Mod2" type="TextureButton" parent="Gioca/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("9_mi1sd")

[node name="Mod3" type="TextureButton" parent="Gioca/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("10_0ss7m")

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 414.0
offset_top = 364.0
offset_right = 741.0
offset_bottom = 395.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_nmst4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fqffm")
theme_override_styles/hover = SubResource("StyleBoxFlat_cc4n5")
text = "Indietro"

[node name="ShipSpawner" type="Node2D" parent="."]
script = ExtResource("8_0edrc")

[node name="Timer" type="Timer" parent="ShipSpawner"]
wait_time = 3.0
autostart = true

[node name="MoneteLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 17.0
text = "Stelle: 0"

[connection signal="pressed" from="MainButtons/Button1" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MainButtons/Button2" to="." method="_on_settings2_pressed"]
[connection signal="pressed" from="MainButtons/Button3" to="." method="_on_settings1_pressed"]
[connection signal="value_changed" from="Options/VBoxContainer/AudioControl" to="." method="_on_audio_control_value_changed"]
[connection signal="value_changed" from="Options/VBoxContainer/AudioControl" to="Options/VBoxContainer/AudioControl" method="_on_value_changed"]
[connection signal="toggled" from="Options/VBoxContainer/FullscreenControl" to="Options/VBoxContainer/FullscreenControl" method="_on_toggled"]
[connection signal="toggled" from="Armadietto/Miglioramenti/Upgrade1" to="Armadietto/Miglioramenti" method="_on_upgrade_1_toggled"]
[connection signal="toggled" from="Armadietto/Miglioramenti/Upgrade2" to="Armadietto/Miglioramenti" method="_on_upgrade_2_toggled"]
[connection signal="pressed" from="Armadietto/Miglioramenti/Button" to="Armadietto/Miglioramenti" method="_on_button_pressed"]
[connection signal="pressed" from="Armadietto/Miglioramenti/Button2" to="Armadietto/Miglioramenti" method="_on_button_2_pressed"]
[connection signal="pressed" from="Armadietto/Miglioramenti/Ritorno" to="Armadietto/Miglioramenti" method="_on_ritorno_pressed"]
[connection signal="pressed" from="Armadietto/Skin/Seleziona" to="Armadietto/Skin" method="_on_seleziona_pressed"]
[connection signal="pressed" from="Armadietto/Skin/Seleziona2" to="Armadietto/Skin" method="_on_seleziona_2_pressed"]
[connection signal="pressed" from="Armadietto/Skin/Back" to="Armadietto/Skin" method="_on_back_pressed"]
[connection signal="pressed" from="Armadietto/Costumi" to="Armadietto" method="_on_costumi_pressed"]
[connection signal="pressed" from="Armadietto/Upgrades" to="Armadietto" method="_on_upgrades_pressed"]
[connection signal="pressed" from="Gioca/Back" to="." method="_on_back_options_pressed"]
[connection signal="pressed" from="Gioca/HBoxContainer/Mod1" to="." method="_on_mod_1_pressed"]
[connection signal="pressed" from="Gioca/HBoxContainer/Mod2" to="." method="_on_mod_2_pressed"]
[connection signal="pressed" from="Gioca/HBoxContainer/Mod3" to="." method="_on_mod_3_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_options_pressed"]
